--- a/src/client/add-ons/manifest.json
+++ b/src/client/add-ons/manifest.json
@@ -3,12 +3,15 @@
     "name": "Radix",
     "description": "This extension add link to download list",
     "version": "1.0",
+    "icons":{ "16": "radix.png",
+           "48": "radix.png",
+          "128": "radix.png" },
     "browser_action" : {
      "default_icon": {
-        "19": "button/geo-19.png",
-        "38": "button/geo-38.png"
+        "19": "radix.png",
+        "38": "radix.png"
         },
-    "default_title": "Whereami?"
+    "default_title": "Radix"
     },
    
     "background": {
